--- a/localisation/simp_chinese/replace/COX_other_countries_events_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/COX_other_countries_events_l_simp_chinese.yml
@@ -5,13 +5,13 @@
  XIN_Sheng_Shicai_desc:0 "在每个人的内心深处，都会藏着一个梦想——是在现实中几乎无法触碰的、纯粹由狂热的信念和欲望钩织起的彼岸。对于盛世才而言，那个梦想，就是成为王。\n\n他几乎成功了。梦想得以兑现之处，是孤悬于塞外的新疆。\n\n很难想象一个辽宁人如何能够成为人们口中的“新疆王”，但盛世才凭借着他天生的强运和投机本领做到了。在1933年的风暴中，他驱逐了他的老上司金树仁，成为了新疆的实际统治者。然而，强敌环伺、风雨飘摇，而新疆王的宝座却黯淡无光。马仲英和张培元无时无刻不在觊觎着那个万人之上的尊位，盛世才只能向北寻找援助，并在作出了“亲苏反帝”的承诺后，得到了红军的援助，终于将他命定的土地牢牢抓握在手中。\n\n约定意味着代价。作为成王必须的代偿，盛世才不得不扮作左翼立场接纳从中原而来的共产党人，让他们进入自己的王庭。他始终用疑惑的眼神注视着这群过于活跃的赤化分子，同时沉默地向关内眺望。苏联轰然倒塌、国民政府一败涂地，而日本成为了亚洲新的主人，这一切都被盛世才看在眼里。盛世才要成为的是王，和新疆无关。他根本不在意新疆如何，只想要守护住他的王座。因此，他可以果断地投向日本的怀抱，也可以果断地屠杀共产党人，尽管前者并没有那么喜欢他，而后者曾是他的恩人与助手。\n\n十年时光倏忽逝去。自玉门关外吹来的风越来越强劲地穿越戈壁，吹入迪化的深深王庭，吹拂着王座上的盛世才。新疆王的外壳在人们的议论中一片片地剥去，盛世才终于显现出了他原本的样貌——他只不过是一个可以为了私利而不断投机的军阀，他说谎、屠杀，毫无气节地当了汉奸。盛世才已经没有维护他权力的手段，只能颤抖着、挣扎着等待最终命运的到来。\n\n——王治总有终结的一天，何况本就只是赝品。这一次，盛世才无处告解，也再不会得救了。"
 #Spirit
  The_Crumbling_Six_Policies:0 "摇摇欲坠的六大政策"
- The_Crumbling_Six_Policies_desc:0 "§Y反帝、容日、和平、清廉、建设、民族平等§!，这是盛世才引以为豪的政治发明，也就是所谓的“六大政策”。在1946年将六大政策中的“亲苏”修改为“容日”时，盛世才一再保证，这并不意味着容共的政策有所改变，也不意味着日本人从此可以左右新疆，然而这两样保证，他一样都没能贯彻。\n随着毛泽民在50年代清洗共产党运动中的死，新疆经济陷入了长期紊乱之中，盛世才不得不积极地吸引日本人来此投资，讥讽他“名为容日，实为通日”的声音随处可闻。§R摇摇欲坠的六大政策已经快要走到生命的尽头，只等有人向它踢上一脚，便会土崩瓦解。§!"
+ The_Crumbling_Six_Policies_desc:0 "§Y反帝、容日、和平、清廉、建设、民族平等§!，这是盛世才引以为豪的政治发明，也就是所谓的“六大政策”。在1946年将六大政策中的“亲苏”修改为“容日”时，盛世才一再保证，这并不意味着容共的政策有所改变，也不意味着日本人从此可以左右新疆，然而这两样保证，他一样都没能贯彻。\n随着50年代清洗共产党运动中毛泽民的死去，新疆经济陷入了长期紊乱之中，盛世才不得不积极地吸引日本人来此投资，讥讽他“名为容日，实为通日”的声音随处可闻。§R摇摇欲坠的六大政策已经快要走到生命的尽头，只等有人向它踢上一脚，便会土崩瓦解。§!"
  Where_Are_They:0 "他们在哪里？"
- Where_Are_They_desc:0 "在经历了重庆停火与青海组阁后，对中央机会主义路线大感不满的中国共产党强硬派远走新疆，与毛泽民和当地原有的社会主义组织汇合。红色力量的不断增长，使得盛世才坐立难安，不得不撕下了容共的面具大肆屠杀——共产党人确实随着屠刀的挥舞消失不见了，可这并不意味着他们已然灭亡。\n他们在哪里？十年倏尔而逝，新疆的共产党人依旧坚持着他们的斗争。他们行走在旷野上，出没在村镇与城市的街头巷尾，甚至可能已经又一次打入了执政府的心脏；§x他们绝不会宽恕，也绝不会忘记。§!"
+ Where_Are_They_desc:0 "在经历了重庆停火后和二次长征之后，中共残部的一部分流向新疆，与以毛泽民为代表的中共支部和当地原有的社会主义组织汇合。红色力量的不断增长，使得盛世才坐立难安，不得不撕下了容共的面具大肆屠杀——共产党人确实随着屠刀的挥舞消失不见了，可这绝不意味着他们已然灭亡。\n他们在哪里？十年倏尔而逝，新疆的共产党人依旧坚持着他们的斗争。他们行走在北疆的旷野上，出没在全疆各地的村镇与城市的街头巷尾，甚至可能已经又一次打入了执政府的心脏；§x他们绝不会宽恕，也绝不会忘记。§!"
  Aksai_Chin_Issue:0 "阿克赛钦问题"
- Aksai_Chin_Issue_desc:0 "随着英国政府在第二次世界大战中的战败与流亡，失去宗主国保障的英属印度陷入了极大的混乱之中，一度被强行兼并的阿克赛钦借机脱离，并内附于新疆当局。当然，阿克赛钦这样做的理由和当地人的中华观念并不必然相关，与其说是内附，不如说是要挟——新疆当局不得不承认他们的半自治地位，并为他们提供必要的工业产品，用以换取对阿克赛钦的主权宣称。§Y时至今日，这块连接新疆和西藏的战略要地，俨然成为了新疆省内的小小独立王国。§!"
+ Aksai_Chin_Issue_desc:0 "随着英国政府在第二次世界大战中的战败与流亡，失去宗主国保障的英属印度陷入了极大的混乱之中，新疆当局趁机夺回了被侵占已久的北阿克赛钦。但随着时间的推移，治理能力退化的省政府已经无力顾及此地，而新独立的印度共和国，显然对这块“白石滩”耿耿于怀。§Y时至今日，这块连接新疆和西藏的战略要地，是否还能握在新疆手里？§!"
  Unfinished_Railways:0 "哈密-阿克苏铁路"
- Unfinished_Railways_desc:0 "东西向穿越新疆省的哈密-阿克苏铁路，是毛泽民为新疆留下的一笔遗产。按照构想，这条铁路将会连接轻纺工业聚集地哈密与棉花产地阿克苏，从而使原料更加高效快捷地流动，但随着毛泽民的身故，铁路的建成工期便无限期地延长了。\n对于新疆当局而言，这条未能修成的铁路令他们无所适从。一方面，他们没有能力自主完工，日本人对这个项目不感兴趣；另一方面，他们也没有能力维护和运作现有的线路。§Y在许多人眼中，哈密-阿克苏铁路，就是新疆持续十年经济衰退的缩影。§!"
+ Unfinished_Railways_desc:0 "东西向穿越新疆省的哈密-阿克苏铁路及其规划，是前建设厅厅长毛泽民为新疆留下的一笔遗产。按照规划，这条铁路将会连接轻纺工业聚集地哈密与棉花产地阿克苏，从而使原料更加高效快捷地流动，但随着毛泽民的身故，铁路的建成工期便无限期地延长了。\n对于新疆当局而言，这条未能完全修成的铁路令他们无所适从：一方面，他们没有能力自主完工，而日本人也对这个项目不感兴趣；另一方面，他们也没有能力维护和运作好现有的线路。§Y在许多人眼中，哈密-阿克苏铁路，就是新疆持续十年经济衰退的缩影。§!"
 #INTRO_TREE
  XIN_The_New_Year_speech_of_our_Superintendent:0 "盛督理的新年讲话"
  XIN_The_New_Year_speech_of_our_Superintendent_desc:0 ""
