--- a/localisation/simp_chinese/LFB_ideas_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_ideas_l_simp_chinese.yml
@@ -15,7 +15,7 @@
   chaotic_band: "千疮百孔的边境线"
   chaotic_band_desc: "盛世才政权从未“过多”关注新疆的边境地区，当苏联崩溃、对苏贸易骤减，边境维稳成本却成倍增加时尤为如此：盛世才果断放弃驻守西北边境，转而推动新疆接入大东亚共荣圈。随着“西北崛起”号角响起，迪化也连带着捞得不少好处。但是穿山越岭的贸易路线滋生了不少以掳掠、抢劫和收“过路费”为生的土匪山贼。时至今日，这些不法之徒已成了东部边境的威胁……"
   south_sik_out_of_control: "不受控制的南疆地区"
-  south_sik_out_of_control_desc: "由于南疆地主过于恰到好处地举起反旗和我们一同打倒了盛世才，他们在南疆地区还保留了相当的控制力，给苏维埃的工作开展带来了很大的困难。"
+  south_sik_out_of_control_desc: "由于南疆地主过于恰到好处地举起反旗和我们一同打倒了盛世才，他们在南疆地区还保留了相当的控制力，这给苏维埃的工作开展带来了很大的困难。"
   yananmoshi: "延安模式"  
   yananmoshi_desc: "新疆的革命形式异常凶险，许多问题也是我们头一遭面对的。正因如此，独立自主,依靠群众的延安精神显得尤为重要。我们的干部将使用切实的方式调查各个村庄的土地情况，以便开展更大规模的群众运动——正如二十年前那场发生在陕北的运动一样。"
   land_reform_on_going: "土地革命进行中"
