--- a/localisation/simp_chinese/COX_liberate_Shaanxi_GUI_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_liberate_Shaanxi_GUI_l_simp_chinese.yml
@@ -5,7 +5,7 @@
  COX_Liberate_Shaanxi_decision1_tt:0 "[!COX_Liberate_Shaanxi_decision2_click]\n[!COX_Liberate_Shaanxi_decision1_click_enabled]"
  COX_Liberate_Shaanxi_decision2_tt:0 "[!COX_Liberate_Shaanxi_decision2_click]\n[!COX_Liberate_Shaanxi_decision2_click_enabled]"
  COX_Liberate_Shaanxi_decision3_tt:0 "[!COX_Liberate_Shaanxi_decision3_click]\n[!COX_Liberate_Shaanxi_decision3_click_enabled]"
- COX_Liberate_Shaanxi_decision4_tt:0 "[!COX_Liberate_Shaanxi_decision4_click]\n[!COX_Liberate_Shaanxi_decision4_click_enabled]"
+ COX_Liberate_Shaanxi_decision4_tt:0 "[!COX_Liberate_Shaanxi_decision4_click]\n[!COX_Liberate_Shaanxi_decision4_click_enabled]\n解放不小于60"
  COX_Liberate_Shaanxi_decision5_tt:0 "[!COX_Liberate_Shaanxi_decision5_click]\n[!COX_Liberate_Shaanxi_decision5_click_enabled]"
  COX_Liberate_Shaanxi_decision6_tt:0 "[!COX_Liberate_Shaanxi_decision6_click]\n[!COX_Liberate_Shaanxi_decision6_click_enabled]"
  COX_Liberate_Shaanxi_decision7_tt:0 "[!COX_Liberate_Shaanxi_decision7_click]\n[!COX_Liberate_Shaanxi_decision7_click_enabled]"
