--- a/localisation/simp_chinese/COX_laws_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_laws_l_simp_chinese.yml
@@ -1,6 +1,6 @@
 ﻿l_simp_chinese:
  COX_get_law_tooltip: "[GetAssortedLawsDescCOX]"
- COX_land_reform_on_going_law: "§t1963年§!£GFX_jiaobiao_LFB §e中国土地法大纲§!"
- COX_land_reform_on_going_law_desc: "£jiaobiao_LFB §e《大纲》§!§Y第一条§!\n废除§r封建性及半封建性剥削§!的土地制度，实行§e耕者有其田§!的土地制度。\n\n1962年£jiaobiao2_LFB §x新疆苏维埃§!成立之初，进行了§x土地改革§!，废除§r封建地主§!的土地占有，实行§G土地私人所有制§!，并与此同时鼓励和支持农民建立或加入§x农业公社§!实行§x集体所有制§!，确立了人民对土地这个§Y生产资料§!的所有权，这一系列措施旨在消除§r封建剥削§!，推动农业发展，践行§G新民主主义革命§!，并加快步伐进入§x集体化§!，建立§e无产阶级专政§!。£jiaobiao_LFB §e《大纲》§!的通过有助于提高农民的生活水平，减少§q社会不平等§!，是苏区稳定和进步的主要活力来源之一。"
+ COX_land_reform_on_going_law: "§R1963年§!£GFX_COX_jiaobiao_LFB §e中国土地法大纲§!"
+ COX_land_reform_on_going_law_desc: "£GFX_COX_jiaobiao_LFB §e《大纲》§!§Y第一条§!\n废除§r封建性及半封建性剥削§!的土地制度，实行§e耕者有其田§!的土地制度。\n1962年£GFX_COX_jiaobiao2_LFB §x新疆苏维埃§!成立之初，进行了§x土地改革§!，废除 §r封建地主§!的土地占有，实行§G土地私人所有制§!，并与此同时鼓励和支持农民建立或加入§x农业公社§!实行§x集体所有制§!，确立了人民对土地这个§Y生产资料§!的所有权，这一系列措施旨在消除§r封建剥削§!，推动农业发展，践行§G新民主主义革命§!，并加快步伐进入§x集体化§!，建立§e无产阶级专政§!。£GFX_COX_jiaobiao_LFB §e《大纲》§!的通过有助于提高农民的生活水平，减少§q社会不平等§!，是苏区稳定和进步的主要活力来源之一。"
  COX_land_reform_succeeded_law: "§x第二次土地改革§!的成果"
- COX_land_reform_succeeded_law_desc: "在20世纪30年代的£jiaobiao3_LFB §m中国§!，军阀割据，混乱不堪。此时正处于£jiaobiao3_LFB §m国民党§!与£jiaobiao4_LFB §x中国共产党§!激烈斗争的时期。正是在这个历史背景下，£jiaobiao4_LFB §x中国共产党§!领导的§e土地革命§!成为了推动中国农村社会深刻变革的重要力量。而1963年在£jiaobiao2_LFB §x新疆§!进行的第二次§e土地革命§!，通过土地的再分配以及水利的建设和封建制度打击，极大的提高了£jiaobiao2_LFB §x新疆人民§!的生活地位。自此我们宣布，第二次§e土地革命§!顺利完成。革命的£jiaobiao4_LFB §x红旗§!将猎猎飘扬在£jiaobiao2_LFB §x新疆§!上空。"
+ COX_land_reform_succeeded_law_desc: "在20世纪30年代的£GFX_COX_jiaobiao3_LFB §m中国§!，军阀割据，混乱不堪。此时正处于£GFX_COX_jiaobiao3_LFB §m国民党§!与£GFX_COX_jiaobiao4_LFB §x中国共产党§!激烈斗争的时期。正是在这个历史背景下，£GFX_COX_jiaobiao4_LFB §x中国共产党§!领导的§e土地革命§!成为了推动中国农村社会深刻变革的重要力量。而1963年在£GFX_COX_jiaobiao2_LFB 新疆进行的第二次§e土地革命§!，通过土地的再分配以及水利的建设和封建制度打击，极大的提高了£GFX_COX_jiaobiao2_LFB §x新疆人民§！的生活地位。自此我们宣布，第二次§e土地革命§!顺利完成。革命的£GFX_COX_jiaobiao2_LFB §x红旗§!将猎猎飘扬在£GFX_COX_jiaobiao2_LFB §x新疆§！上空。"
