蒙古内战部分

--- a/localisation/simp_chinese/LFB_character_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_character_l_simp_chinese.yml
@@ -65,3 +65,6 @@
 #马家军
   QIN_Ma_Bufang: "马步芳"
   POLITICS_MA_BUFANG_DESC: "有人说，西北马家共尊真主，故得长幼和睦，尊卑有序；西北人民唯奉安拉，故得战乱鲜少，生活富足。但此刻坐在王座上的马步芳十分清楚，抛去真主圣言的粉饰，西北诸军阀的本质与中原并无不同，都是披着人皮的野兽。\n出卖国家，背叛人民，甚至背叛自己的至亲——就连马步芳自己，都伙同南京政府，与马步荣一道逼迫其父马麟将权柄交出，才得以执掌青海。但马家确实胜于中原军阀的一点是——每当大敌当前，信众们便会爆发出惊人的团结，无论分歧几何，他们也大体上服从领导者的决定，自清末以来便一贯于此。\n无论面对的是共产党还是国民党，是汉人还是日寇，马步芳都小心地把控着西北的航向。觉察日军不愿劳师远征青海，马步芳便明智地保存实力，将重庆的电报每每搁置一旁。待到战局明朗之际，他果断改换阵营，令西北赶上了战后经济复苏的快车，开创了“塞上江南”的繁荣神话。\n时过境迁，但马步芳的统治仍稳如泰山，放眼四方，日资仍争抢着涌入，而南京政府也无力对西北自治做出干涉。就连西藏的喇嘛，也自觉避开马家军的锋芒。但伟大的“西北王”如今已步入其暮年，多年来放荡奢靡的生活拖垮了他的身子，好在曾环绕膝下的孩子们已经长成，终有一日，他们必将从自己手中接过这雄厚的遗产，无论早晚....无论用什么手段....."
+#蒙古
+ MEN_batedaoerji: "巴特·道尔吉"
+ MEN_zedengbaer: "尤木佳·泽登巴尔"
