--- a/localisation/simp_chinese/LFB_countries_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_countries_l_simp_chinese.yml
@@ -93,3 +93,5 @@ Construction_Corps:0 "建设兵团"
 
 TNO_newspaper_header_COX: "\n£newspaper_header_COX\n\n\n\n"
 TNO_newspaper_header_XBJ: "\n£newspaper_header_XBJ\n\n\n\n"
+
+MEN_communist: "蒙古人民共和国"
