更改蒙古党派名字

--- a/localisation/simp_chinese/LFB_countries_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_countries_l_simp_chinese.yml
@@ -95,3 +95,4 @@ TNO_newspaper_header_COX: "\n£newspaper_header_COX\n\n\n\n"
 TNO_newspaper_header_XBJ: "\n£newspaper_header_XBJ\n\n\n\n"
 
 MEN_communist: "蒙古人民共和国"
+MEN_communist_party: "蒙古人民阵线"
