规范了省略号用法

--- a/localisation/simp_chinese/LFB_national_focuses_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_national_focuses_l_simp_chinese.yml
@@ -15,7 +15,7 @@
 	COX_Far_From_Home: "为了阔别的故乡"
 	COX_Far_From_Home_desc: "自1947年重庆停火以来，革命春雷的余响已在中华大地上沉寂了十五年，现在中国旅的归来要改变这无边的死寂了。对于中国战士们而言，这是一次向故土的大进军——故乡的山山水水令他们魂牵梦绕，故乡的情况让他们挂肚牵肠。专制军阀骑在人民头上作威作福的好日子已经进入了倒计时——我们的队伍阔别热土已久，如今将带着革命的星火再度归来。"
 	COX_For_The_Farmers_Who_Suffered: "为了受尽压迫的农民"
-	COX_For_The_Farmers_Who_Suffered_desc: "新疆的贫农们在黑暗的封建地主和各种统治阶级的压迫下已经生活了数千年了。数千年来，新疆的农业生产者们无时无刻不在心惊胆战中度过，生怕见不到第二天的太阳。但即便他们再怎么如履薄冰，反动统治者们总能找到各种理由从他们身上榨取“油水”：结婚要结婚税，买粮食工具要商品税，修房子要建筑税......同时，新疆的混乱局势也让他们的情况雪上加霜：地主武装“割据”、盗匪横行、极端宗教大肆破坏；新疆的广大农民正处在水深火热之中。\n\n而我们的任务，就是解放新疆，把新疆农民们从那些压迫者的铁腕下拯救出来！"
+	COX_For_The_Farmers_Who_Suffered_desc: "新疆的贫农们在黑暗的封建地主和各种统治阶级的压迫下已经生活了数千年了。数千年来，新疆的农业生产者们无时无刻不在心惊胆战中度过，生怕见不到第二天的太阳。但即便他们再怎么如履薄冰，反动统治者们总能找到各种理由从他们身上榨取“油水”：结婚要结婚税，买粮食工具要商品税，修房子要建筑税……同时，新疆的混乱局势也让他们的情况雪上加霜：地主武装“割据”、盗匪横行、极端宗教大肆破坏；新疆的广大农民正处在水深火热之中。\n\n而我们的任务，就是解放新疆，把新疆农民们从那些压迫者的铁腕下拯救出来！"
 	COX_Our_Troop_Towards_The_Sun: "我们的队伍向太阳"
 	COX_Our_Troop_Towards_The_Sun_desc: "在敌众我寡，补给缺乏的情况下，革命还是取得了胜利。随着迪化城的解放，盛世才在新疆的统治已经土崩瓦解。我们的队伍走过了漫长的路途，击败了内外帝国主义的走狗，终于在新疆扎下了根。\n从今往后，新成立的苏维埃政府将会领导中国人民进行建设，直至战胜一切帝国主义！"
 
@@ -173,9 +173,9 @@
 	COX_Set_Up_Spy_System: "重组特别事务科"
 	COX_Set_Up_Spy_System_desc: "无论是什么时代的何种战争，情报永远是保证胜利的关键一环。长期以来，中国共产党重视情报的运用，使得革命能够在敌人的重重封锁下越烧越旺。但随着抗日战争的失败，党的情报机构四散各地，大多就此隐蔽起来。虽然不知道他们能否在敌人的围剿下存续二十年，我们仍需尽可能的重建情报系统，哪怕是勒紧裤腰带也要把它搞回来：因为每多一份情报的支持，我们的战士就能少流一滴血汗；每联系上一个新的地区，我们的革命就会多出一份可能。"
 	COX_Maintain_Communication_Equipment: "通讯设备换新"
-	COX_Maintain_Communication_Equipment_desc: "新疆原有的电台不仅稀少，也早已老旧不堪。但是事情有了一些变化：在过去与俄罗斯到蒙古的艰难辗转中，中国旅曾偷偷收缴过来自过去蒙古红军的一整套电台设施......因此，我们也不再需要找其他人购买了。现在，我们将尝试以这台完好的电台为参照，设计属于我们自己的崭新电台设施。通过与布里亚特的技术交流，我们可以重头开始，绘制出可堪一用的电台网络雏形。"
+	COX_Maintain_Communication_Equipment_desc: "新疆原有的电台不仅稀少，也早已老旧不堪。但是事情有了一些变化：在过去与俄罗斯到蒙古的艰难辗转中，中国旅曾偷偷收缴过来自过去蒙古红军的一整套电台设施……因此，我们也不再需要找其他人购买了。现在，我们将尝试以这台完好的电台为参照，设计属于我们自己的崭新电台设施。通过与布里亚特的技术交流，我们可以重头开始，绘制出可堪一用的电台网络雏形。"
 	COX_Endless_Radio_Waves: "永不停息的电波"
-	COX_Endless_Radio_Waves_desc: "“山河无恙否？\n”“尤有艰难。”\n陕北，华中，四川......甚至东北的雪原与云南的密林，虽然我们收到的只是短短的几句密语，但仍惊喜于如此多的同志们奋战至今。由于山水相隔，敌众盘踞，我们没办法对他们提供任何援助。但终有一日，这脆弱的电波会交织出地下革命网络的新生。"
+	COX_Endless_Radio_Waves_desc: "“山河无恙否？\n”“尤有艰难。”\n陕北，华中，四川……甚至东北的雪原与云南的密林，虽然我们收到的只是短短的几句密语，但仍惊喜于如此多的同志们奋战至今。由于山水相隔，敌众盘踞，我们没办法对他们提供任何援助。但终有一日，这脆弱的电波会交织出地下革命网络的新生。"
 	COX_Red_Joint_Military_Exercise: "红军联合演习"
 	COX_Red_Joint_Military_Exercise_desc: "红军联合演习"
 	COX_The_Red_Corridor_Of_The_Northwest: "西北的红色走廊"
@@ -186,7 +186,7 @@
 	COX_Hold_Cadre_Meeting_desc: "据可靠情报显示，我们的邻居马家军即将爆发一场内乱。新疆苏区自成立以来第一次受到外部威胁。这次动乱是苏区上下干部不得不接受的考验，另一方面也是一次机会。\n\n治安、交通、军队、经济，都是应对此次动乱的重点。\n把这些部门的干部都召集过来！"
 
 	XBJ_Infiltrate_Powder_Keg: "渗透火药桶"
-	XBJ_Infiltrate_Powder_Keg_desc: "据边防战士报告，青海的局势此时已是一团乱麻，他们零碎的描述了袭击边境的土匪马贼，盘踞山巅的高门寺院......四散的难民带来了破碎的消息——日军大举西进，西宁已成废墟，受人民爱戴的马惇靖将军举起了义旗......信息虽多，然而真假难辨。我们仍对南边的这个火药桶知之甚少，我们的情报部门羽翼未丰，但情况紧急，必须有人前往青海，了解那里到底发生了什么。"
+	XBJ_Infiltrate_Powder_Keg_desc: "据边防战士报告，青海的局势此时已是一团乱麻，他们零碎的描述了袭击边境的土匪马贼，盘踞山巅的高门寺院……四散的难民带来了破碎的消息——日军大举西进，西宁已成废墟，受人民爱戴的马惇靖将军举起了义旗……信息虽多，然而真假难辨。我们仍对南边的这个火药桶知之甚少，我们的情报部门羽翼未丰，但情况紧急，必须有人前往青海，了解那里到底发生了什么。"
 	XBJ_We_Protect_The_Poor: "我们保护贫苦的人民"
 	XBJ_We_Protect_The_Poor_desc: "秩序的丧失对于农业生产而言是致命的，无尽的拔兵令青壮长期离开土地，致使土地撂荒，一年的劳作化为乌有。出的起“免征金”的劣绅裹挟着盗匪，鲸吞着贫者的土地，致使青海的劳动人民不得不背井离乡，沦为流民，饱受兵乱之害。他们中的许多已经投入伊斯兰门宦的庇护中，但我们将让他们知晓，只有劳动人民的军队才是劳动人民生命最好的保障。"
 	XBJ_We_Bring_Peace_And_Security: "我们带来和平与安定"
@@ -261,35 +261,35 @@
 	COX_Encourage_Commodity_Economy_desc:0 "鼓励商品经济"
 
 	COX_The_Last_Fight_Against_Japanese_Invader: "对日寇的最后一战"
-	COX_The_Last_Fight_Against_Japanese_Invader_desc: "自从龙云在云南举起义旗的消息传到乌鲁木齐以后，西北的共产党曾紧急召开了几次会议，哪怕是最乐观的估计，“护国军”的胜机也相当渺茫，这看起来只是龙云单方面的“军事冒险行为”。但当西南党中央号召全民族抗战的消息传来时，我们还是集结了兵马，向盘踞兰州的西北军发动了攻击.......\n\n尽管我们在那场战争中损失惨重，致使新生的根据地一度陷入困境。但出乎所有人预料的是，在日寇的铁蹄压迫之下，全国上下遍地的星火一触即燃，护国军一路高歌猛进，解放了华南的大部分地区，直到南京解放的消息传到西北以后，苏区上下为之一振。尽管此时的西北仍未从战火的余烬中走出，但在这场关乎全民族命运的抗战中，我们必将砥砺共进！"
-	COX_The_Workers: "工人们..."
-	COX_The_Workers_desc: "你们是党的仰仗，革命的先锋，民族力量的源泉。你们的战场在车间，在流水线，在铸造厂......虽无硝烟，但斗争必将同样恶劣残酷，敌人将千方百计的阻挠，破坏我们的生产，他们的轰炸机将丢下炸弹，他们的间谍将煽动破坏。但英勇的工人阶级必将挫败一切阴谋诡计！让敌人知晓，他们的旧秩序已经朽烂，而我们，无产阶级，有创造一个新世界的决心与能力！"
+	COX_The_Last_Fight_Against_Japanese_Invader_desc: "自从龙云在云南举起义旗的消息传到乌鲁木齐以后，西北的共产党曾紧急召开了几次会议，哪怕是最乐观的估计，“护国军”的胜机也相当渺茫，这看起来只是龙云单方面的“军事冒险行为”。但当西南党中央号召全民族抗战的消息传来时，我们还是集结了兵马，向盘踞兰州的西北军发动了攻击……\n\n尽管我们在那场战争中损失惨重，致使新生的根据地一度陷入困境。但出乎所有人预料的是，在日寇的铁蹄压迫之下，全国上下遍地的星火一触即燃，护国军一路高歌猛进，解放了华南的大部分地区，直到南京解放的消息传到西北以后，苏区上下为之一振。尽管此时的西北仍未从战火的余烬中走出，但在这场关乎全民族命运的抗战中，我们必将砥砺共进！"
+	COX_The_Workers: "工人们…"
+	COX_The_Workers_desc: "你们是党的仰仗，革命的先锋，民族力量的源泉。你们的战场在车间，在流水线，在铸造厂……虽无硝烟，但斗争必将同样恶劣残酷，敌人将千方百计的阻挠，破坏我们的生产，他们的轰炸机将丢下炸弹，他们的间谍将煽动破坏。但英勇的工人阶级必将挫败一切阴谋诡计！让敌人知晓，他们的旧秩序已经朽烂，而我们，无产阶级，有创造一个新世界的决心与能力！"
 	COX_Light_The_Fire: "把炉火烧得通红！"
 	COX_Light_The_Fire_desc: "19世纪以来，工业生产对于战争的重要性不言自明。此时的西北仍没有成体系的工业，我们能做的只有充分利用好手头的一切资源。为数不多的生产线将迁至山间，在西北崇山峻岭的庇佑下，它们将免遭敌人的破坏。工人们将被组织起来，投入战时生产。钢铁与木材，硫磺与硝石，数目虽不大，但将源源不断的涌入产线。经过不间断的生产线，它们最终将汇入抗日的铁流，化作射向敌人心脏的子弹！"
-	COX_The_Fighters: "战士们..."
+	COX_The_Fighters: "战士们…"
 	COX_The_Fighters_desc: "你们是红军，是人民的军队，是我们民族争取自由与解放的希望。很快，你们将踏上真正的战场，与万恶的日本帝国主义拼个死活。诚然，侵略者有着世界最强的武备，他们有坦克，自动步枪与喷气飞机，但武器并不是决定战争的唯一因素——握着日械的伪军，不是已经败于自云南一隅起兵的护国军了吗？\n\n这里的很多人，都是三十年前逃难来的，但现在，全民族抗日的号角再一次吹响了！同志们，这次我们不会再逃了，让我们组织起来，一起打回老家去！"
 	COX_Hold_The_Gun: "将钢枪紧握在手！"
-	COX_Hold_The_Gun_desc: "装备低下，充盈着革命热情的赤卫队；整编后的新疆军阀部队；还有规模庞大，作战经验丰富，但仅听命于马惇靖的宁系马家军.......此时的西北“红军”，更像是新疆与青海军队粗暴的融合。就常理而言，这样民族构成复杂，甚至存在意识形态分歧的部队，其内部必然充斥着矛盾与冲突，几乎不可能步调一致的行动。但第二次抗日战争的爆发，使得红军与宁系马家有了共同的目标，在抗日的旗帜下，目睹了日军在兰州暴行的战士们同仇敌忾，抛下了民族与宗教的分歧。每个人都将步枪紧握于手，誓与敌寇拼死活！"
-	COX_The_Peasants: "农民们..."
-	COX_The_Peasants_desc: "你们是中国的脊梁，千年来，你们承受的苦难数倍于其他民族。有人认为你们软弱，只会默默忍受压迫，心甘情愿引颈受戮......但中国的农民，同样有着悠久的抗争史；摆在我们面前的，是同样的一群贼寇，他们用枪炮抢来土地，豢养起奴才，就往安乐椅上一摊，心安理得地吸着整个亚洲的血！\n\n在东方，还有数亿同胞活在这样悲惨的压迫之下，农民同志们，你们能够忍受吗？既然我们已经在西北打倒了成千上万的小地主，烧掉了他们的地契，遣散了他们的家丁。那么全中国的每家每户，每个村庄都联合起来，我们就有摧毁日本帝国主义——这亚洲最大最可恶的地主的力量！"
+	COX_Hold_The_Gun_desc: "装备低下，充盈着革命热情的赤卫队；整编后的新疆军阀部队；还有规模庞大，作战经验丰富，但仅听命于马惇靖的宁系马家军……此时的西北“红军”，更像是新疆与青海军队粗暴的融合。就常理而言，这样民族构成复杂，甚至存在意识形态分歧的部队，其内部必然充斥着矛盾与冲突，几乎不可能步调一致的行动。但第二次抗日战争的爆发，使得红军与宁系马家有了共同的目标，在抗日的旗帜下，目睹了日军在兰州暴行的战士们同仇敌忾，抛下了民族与宗教的分歧。每个人都将步枪紧握于手，誓与敌寇拼死活！"
+	COX_The_Peasants: "农民们…"
+	COX_The_Peasants_desc: "你们是中国的脊梁，千年来，你们承受的苦难数倍于其他民族。有人认为你们软弱，只会默默忍受压迫，心甘情愿引颈受戮……但中国的农民，同样有着悠久的抗争史；摆在我们面前的，是同样的一群贼寇，他们用枪炮抢来土地，豢养起奴才，就往安乐椅上一摊，心安理得地吸着整个亚洲的血！\n\n在东方，还有数亿同胞活在这样悲惨的压迫之下，农民同志们，你们能够忍受吗？既然我们已经在西北打倒了成千上万的小地主，烧掉了他们的地契，遣散了他们的家丁。那么全中国的每家每户，每个村庄都联合起来，我们就有摧毁日本帝国主义——这亚洲最大最可恶的地主的力量！"
 	COX_Stuff_The_Granary: "让谷物堆满粮仓！"
 	COX_Stuff_The_Granary_desc: "毫无疑问，充足的粮食供应对战争的胜负至关重要。在上一次对日战争中，中国军民从不缺乏视死如归的勇气与战斗到底的决心，但凭借着对中国农业生产的完全摧毁，日军还是艰难地赢得了持久战的胜利。\n\n如今，苏区的大部分地方刚经过了土改，其农业基础仍十分脆弱，但我们别无选择，只能紧急征收农民手中本不多的余粮，建立战时粮仓，以供应前线战斗与后方生产的需要。\n\n争取民族自由的斗争，容不得任何踌躇犹豫。"
 	COX_Free_Lanzhou: "解放兰州！"
-	COX_Free_Lanzhou_desc: "由于训练不足，部队配合适当，以及敌人的激烈抵抗，使得我们上次进攻兰州的尝试收效甚微。\n\n但根据情报部门传回的消息来看，随着龙云在南方的胜利，西北军的部署似乎出现了许多漏洞，补给不畅，大军进退失据，游击队的活动也更胜以往。我们已经初步具备了解放兰州的条件，现在要做的就是加紧战备，开始动员。让西北的那条疯狗早日迎来他的末日！"
+	COX_Free_Lanzhou_desc: "由于训练不足，部队配合失当，以及敌人的激烈抵抗，使得我们上次进攻兰州的尝试收效甚微。\n\n但根据情报部门传回的消息来看，随着龙云在南方的胜利，西北军的部署似乎出现了许多漏洞，补给不畅，大军进退失据，游击队的活动也更胜以往。我们已经初步具备了解放兰州的条件，现在要做的就是加紧战备，开始动员。让西北的那条疯狗早日迎来他的末日！"
 	COX_Learn_From_War: "在战争中学习"
 	COX_Learn_From_War_desc: "我们的赤卫队尽管斗志昂扬，但他们仅有的实战经验只有对抗还乡团与土匪山贼。无论接受了怎样的训练，举行了多少演习，都无法得到宝贵的随机应变的能力。战争的形态已经发生了深刻的变革，就连我们军队的指挥员——上一次大战的亲历者，都无法在指挥部中预料这场战争的模样。\n\n要让我们的指战员真正的适应现代战争，唯一的方法是让他们在战争中学习，在战场上蜕变。我们将总结战士们用鲜血得到的宝贵经验，更有力地痛击侵略者。"
 	COX_New_Tactics: "新战术"
 	COX_New_Tactics_desc: "距离伟大的抗日战争已有二十余年，在这二十年里，日军的武器装备在不断推陈出新，其作战理念，也在与世界其他列强的交锋中不断革新。我们面对的敌人已经改头换面。共产党人从来与迂腐守旧无缘，唯有与时俱进，才能确保我们的胜利不以大量的伤亡为代价。\n\n如何处理复合装甲的坦克？如何击毁低空巡飞的直升机？如何应对火力更猛的阵地碉楼?\n\n战争的形态已经发生了翻天覆地的变革，我们唯有发挥共产党人一贯的作风——学习敌人的战法，钻研透彻，然后将其击败。"
 	COX_Traditional_Method: "土办法"
-	COX_Traditional_Method_desc: "尽管日寇的装备已与二十年前不可同日而语，然而他们内在的一些恶行与弱点却作为“武士道军魂”得到了贯彻与传承。在上次大战中，中国人民充分发挥了自己的智慧，用一切非常规手段打击侵略者，进行了不屈不挠的斗争——地道战，地雷战，麻雀战......根据家乡地形与作战烈度的不同，一系列因地制宜的“土办法”被创造了出来。\n\n现在看来这些”土办法“依然有用，我们将在广大的敌后战场将它们贯彻到底，让人民的智慧成为我们的制胜法宝。"
+	COX_Traditional_Method_desc: "尽管日寇的装备已与二十年前不可同日而语，然而他们内在的一些恶行与弱点却作为“武士道军魂”得到了贯彻与传承。在上次大战中，中国人民充分发挥了自己的智慧，用一切非常规手段打击侵略者，进行了不屈不挠的斗争——地道战，地雷战，麻雀战……根据家乡地形与作战烈度的不同，一系列因地制宜的“土办法”被创造了出来。\n\n现在看来这些”土办法“依然有用，我们将在广大的敌后战场将它们贯彻到底，让人民的智慧成为我们的制胜法宝。"
 	COX_Maintain_Wartime_Production_Order: "维持战时生产秩序"
 	COX_Maintain_Wartime_Production_Order_desc: "生活需要物资，战争更加需要物资。在抗战的热情感染着根据地的同时，我们的一些同志似乎热情过头了，这不仅没能带来效率的提高，反而在一定程度上破坏了生产秩序。这对于战时后勤的损害不可谓不大，我们将采取一些措施维护生产秩序。\n\n除此之外，敌人的渗透同样值得我们重视。并不是所有人都全心全意地投入了全民族抗战之中。毋宁说，对于某些已经被打倒的反动派来说，战争的爆发反倒为他们提供了机遇。他们中的许多本就不在乎发生在千里之外，与自己“毫无关系”的抗战，更有甚者，为了重建他们的腐朽统治，不惜与日寇勾结。对于这种民族的败类，我们必须坚决予以打击。"
 	COX_Secure_Supply_Lines: "保障补给线"
 	COX_Secure_Supply_Lines_desc: "以前在延安的时候，我们的军队建设一穷二白，甚至不能保证武器和子弹的自给。如今我们再一次面临与日本人的全面战争。这一次，我们的子弹一定能打的和日本人的一样远，手榴弹一定能炸得和日本人的一样疼。这需要我们不惜一切代价维护补给线的通畅。\n\n从西北的工厂将物资输送至前线是一段艰难的路程。马家多年的经营早已在战火与混乱中被付之一炬，这里没有一条铁路，卡车能通行的路段也十分有限，许多地方必须依靠人畜力进行运输。除去恶劣的自然环境，敌人的轰炸仍能构成可观的破坏。我们将规划可行的路线，动员根据地的人民参与确保补给线的畅通。"
 	COX_Streamline_Production_Process: "简化生产流程"
 	COX_Streamline_Production_Process_desc: "是的，在生产物资的时候，我们应当保质保量，但是面对武装到牙齿的日本人，红军的战士们常常苦于物资不足而无法取胜或扩大战果。战士们需要更多的枪炮弹药，我们需要把物资更快地生产出来以供给前线。\n\n我们现有的生产线本就十分老旧，且数量稀少，除了三班倒不间断生产外，我们必须引入简化的生产流程以提高产量。幸运的是，在长期的冲突中，俄罗斯军阀正好积累了大量“简化”生产与土造武器的经验。"
-	COX_Comrades_In_North_Shaanxi: "陕北的同志们..."
-	COX_Comrades_In_North_Shaanxi_desc: "二十年前，为了保存革命的火种，党中央的大部进行了艰苦卓绝的第二次长征，来到了西南。那些留守根据地的同志，我们一度认为他们遭受了与留守井冈山的同志们相同的命运......\n\n但时至今日，随着通讯网的恢复，我们惊奇地发觉仍有一小部分同志仍在陕北坚持，虽然他们一度被逼入绝境，但凭借人民的支持以及对地形的熟知，他们仍熬过了战后最艰难的岁月。如今，他们经营着几块小根据地，彼此分散，缺枪少弹。我们要找到他们，然后联合他们，趁着日军对陕西失去控制的契机，夺回曾经的革命圣地。"
+	COX_Comrades_In_North_Shaanxi: "陕北的同志们…"
+	COX_Comrades_In_North_Shaanxi_desc: "二十年前，为了保存革命的火种，党中央的大部进行了艰苦卓绝的第二次长征，来到了西南。那些留守根据地的同志，我们一度认为他们遭受了与留守井冈山的同志们相同的命运……\n\n但时至今日，随着通讯网的恢复，我们惊奇地发觉仍有一小部分同志仍在陕北坚持，虽然他们一度被逼入绝境，但凭借人民的支持以及对地形的熟知，他们仍熬过了战后最艰难的岁月。如今，他们经营着几块小根据地，彼此分散，缺枪少弹。我们要找到他们，然后联合他们，趁着日军对陕西失去控制的契机，夺回曾经的革命圣地。"
 	COX_March_Towards_Shanxi: "进军晋地"
 	COX_March_Towards_Shanxi_desc: "全国的局势随着护国军起义的成功形成了连锁反应——日本徒劳的试图在华北维系他们所谓的“秩序”，却只带来了混乱。如今，侵略者与卖国贼在山西筑起了桥头堡，试图将我们阻隔在黄河对岸。但中国人民的决心将不可阻挡！\n\n风在吼，马在叫\n\n黄河在咆哮！"
 	COX_March_Towards_North_China: "挺进华北"
@@ -303,7 +303,7 @@
 	COX_Promote_Anti_Japanese_Imperialism_Propaganda: "抗日宣传"
 	COX_Promote_Anti_Japanese_Imperialism_Propaganda_desc: "中国丰腴的物产孕育了四万万同胞，但广阔的祖国大地却令人们彼此区隔。如今的祖国正命悬一线，在华北的敌占区，甚至西北诸多闭塞的村庄中，人民仍浸透在战后二十年间那令人窒息的麻木之中，不知其他同胞正在拼死捍卫的事业。就让我们的传单代替日军的刺刀，先行打破那里的宁静吧！\n\n召集宣传人员，开动印刷机，我们必须要让哪怕最闭塞的村落中最不知外事的人了解到，中国正在命运的十字路口。没有宣传战线的胜利，抗战的胜利只不过是无稽之谈。"
 	COX_Old_Tunes_With_New_Twists: "老歌新唱"
-	COX_Old_Tunes_With_New_Twists_desc: "上一次抗战，教会了我们一个伟大的道理——音乐可以激励灵魂，塑造一个民族，乃至左右战争的走向。\n\n在拼死战斗的间隙，中华民族优秀的儿女们谱写了无数或激昂或悲怆的乐章，其中一首，更是在抗战时传遍全国，即便在伪国民政府的统治下遭到封禁，却能以朗朗上口的曲调传唱于田间地头，以血与泪的控诉，渗进每个中国人的心田——\n\n§e《抗日人民义勇军进行曲》§!\n\n如今，中华民族再一次到了最危险的时候，每一个不愿意做奴隶的人们，再一次唱起这首老歌。\n\n伴着狱中的月光，迎着初升的曙光；在战壕的泥泞中低吟，在胜利的欢庆中高歌.......我们战斗，我们歌唱，我们必将赢得胜利！"
+	COX_Old_Tunes_With_New_Twists_desc: "上一次抗战，教会了我们一个伟大的道理——音乐可以激励灵魂，塑造一个民族，乃至左右战争的走向。\n\n在拼死战斗的间隙，中华民族优秀的儿女们谱写了无数或激昂或悲怆的乐章，其中一首，更是在抗战时传遍全国，即便在伪国民政府的统治下遭到封禁，却能以朗朗上口的曲调传唱于田间地头，以血与泪的控诉，渗进每个中国人的心田——\n\n§e《抗日人民义勇军进行曲》§!\n\n如今，中华民族再一次到了最危险的时候，每一个不愿意做奴隶的人们，再一次唱起这首老歌。\n\n伴着狱中的月光，迎着初升的曙光；在战壕的泥泞中低吟，在胜利的欢庆中高歌……我们战斗，我们歌唱，我们必将赢得胜利！"
 	COX_Ancient_Country_But_New_Life: "古国新生"
 	COX_Ancient_Country_But_New_Life_desc: "第二次抗日战争的爆发震撼了全世界，全球都将目光再一次投向了这个东亚的破碎国度。\n\n那些试图探寻真相的记者的者所看到的，是一个同仇敌忾，共御外侮的民族；是一个摒弃矛盾，上下一心的国家。原先神秘的古国褪去了死气沉沉的暮气。虽然她的手足仍为锁链束缚，浑身的脓疮与疤痕仍深可见骨，但她已从半睡半死的迷梦中清醒了！\n\n重新抖擞精神，周身萦绕着新生的活力，中国誓要将帝国主义的罪恶荡涤一空！"
 	COX_Public_Trial_Of_Traitorous_Government: "公审汉奸政府"
@@ -313,7 +313,7 @@
 	COX_Convene_National_General_Congress: "召开全国代表大会"
 	COX_Convene_National_General_Congress_desc: "终于，我们千疮百孔的祖国母亲夺回了属于她的自由。曾经彼此失去联系，四分五裂的共产党组织也终于能够重新联系在一起。二十年的风雨见证了无数牺牲，更蹉跎了幸存至今的人的面容，在这胜利的时刻，是时候召开久违的全国代表大会了。来自五湖四海的同志们将汇聚在北京，共同讨论我们党，以及中国的未来。\n\n但在此之前，先让我们举杯，庆贺党的幸存与人民的胜利！"
 	Nanjing_Negotiations:0 "南京谈判"
-	Nanjing_Negotiations_desc:0 "声势浩大的护国战争终于落幕，被外敌奴役二十余年的中国终得解放。中国共产党与国民党，在半个世纪的风云激荡中分分合合，最后还是站在了一起，结成统一战线以争取民族的自由。\n\n但摆在这个受尽苦难的民族面前的，仍是不确定的未来——该如何清算战犯，治愈全面战争带来的创伤？有着根本分歧的两党，能否在一面旗帜下继续携手共进？飞机启程前往南京，南方的天空鲜见日光，内战的阴霾，已经笼罩在地平线之上.......\n\n而中国人民的真正§x未§!§z来§!，全押在这台谈判桌之前。"
+	Nanjing_Negotiations_desc:0 "声势浩大的护国战争终于落幕，被外敌奴役二十余年的中国终得解放。中国共产党与国民党，在半个世纪的风云激荡中分分合合，最后还是站在了一起，结成统一战线以争取民族的自由。\n\n但摆在这个受尽苦难的民族面前的，仍是不确定的未来——该如何清算战犯，治愈全面战争带来的创伤？有着根本分歧的两党，能否在一面旗帜下继续携手共进？飞机启程前往南京，南方的天空鲜见日光，内战的阴霾，已经笼罩在地平线之上……\n\n而中国人民的真正§x未§!§z来§!，全押在这台谈判桌之前。"
 
 
 	#土改失败线
@@ -338,19 +338,19 @@
 	COX_armed_military: "高强度武装的民兵！"
 	COX_armed_military_desc: "人民群众的力量是无穷无尽的！我们共产党人必须相信群众！让我们把农民兄弟武装起来！保护属于他们的田地！"
 	COX_we_are_too_aggressive: "我们太过激进！"
-	COX_we_are_too_aggressive_desc: "经过中共中央长达数天的争吵与讨论，我们最终得出了以下的决议：“我们高估了中国共产党现实的行政能力，以目前中国共产党当前的人手，难以管辖两百余万平方公里的新疆，唐突的将宝贵的干部下放到南疆地区，除了造成无意义的伤亡外，不仅没有完成土地革命，还让地主辖区内的民众不再信任我们......我们无能为力,只能.......做出一定的妥协。”"
+	COX_we_are_too_aggressive_desc: "经过中共中央长达数天的争吵与讨论，我们最终得出了以下的决议：“我们高估了中国共产党现实的行政能力，以目前中国共产党当前的人手，难以管辖两百余万平方公里的新疆，唐突的将宝贵的干部下放到南疆地区，除了造成无意义的伤亡外，不仅没有完成土地革命，还让地主辖区内的民众不再信任我们……我们无能为力,只能……做出一定的妥协。”"
 	COX_armed_military: "联络开明乡绅"
-	COX_armed_military_desc: "古往今来，新疆的地主巴依老爷在农民心目中都有着较好的声誉——老爷们只需要把从农民身上吃的钱财吐出来一点，给村子修水利，修路，修清真寺，就能变为“善人”“安拉的使者”。我们知道这帮地主用的不过是农民的血汗来推广自己的声望，但我们又能怎么办？我们只能和一部分剥削不那么狠的“开明乡绅”合作......."
+	COX_armed_military_desc: "古往今来，新疆的地主巴依老爷在农民心目中都有着较好的声誉——老爷们只需要把从农民身上吃的钱财吐出来一点，给村子修水利，修路，修清真寺，就能变为“善人”“安拉的使者”。我们知道这帮地主用的不过是农民的血汗来推广自己的声望，但我们又能怎么办？我们只能和一部分剥削不那么狠的“开明乡绅”合作……"
 	COX_acquiescence_squire: "默许乡贤政治"
 	COX_acquiescence_squire_desc: "在我们中国共产党辐射势力范围之外的大部分乡村里，与农会相比，乡贤们才是真正的乡村之主，农民们信任乡贤更胜过信任红军，在乡贤的统治下，我们的下乡战士们在进行土地革命工作时总是“失踪”“意外身亡”。我们已经经不起这样的损失了，或许默许我们势力范围以外的地方的乡贤政治，是一个不错的选择？"
 	COX_lease_field_management: "宽松的土地方法"
-	COX_lease_field_management_desc: "在尚未土地革命地区，不分田，不减租，不减息。这是目前出台的新土地方法，这种行为无疑是对反动势力控制下的农民兄弟们的背叛.......但，在我们的势力范围之外，我们的减租减息政策往往也只是加重农民兄弟们的负担，进而让他们怨恨共产党.......我们只能如此......我们的力量太过薄弱。"
+	COX_lease_field_management_desc: "在尚未土地革命地区，不分田，不减租，不减息。这是目前出台的新土地方法，这种行为无疑是对反动势力控制下的农民兄弟们的背叛……但，在我们的势力范围之外，我们的减租减息政策往往也只是加重农民兄弟们的负担，进而让他们怨恨共产党……我们只能如此……我们的力量太过薄弱。"
 	COX_enlist_forces: "收编地主武装"
 	COX_enlist_forces_desc: "我们的政策获得了一定的成效，有部分地主愿意同我们交流，并停止反革命叛乱。他们的地主武装可以被我们整编，以应付那些更顽固的敌人。"
 	COX_eliminate_violence: "消除暴力"
-	COX_eliminate_violence_desc: "我们必须停止当前新疆的混乱局面，让暴力停息，让一切回到过去的那样......"
+	COX_eliminate_violence_desc: "我们必须停止当前新疆的混乱局面，让暴力停息，让一切回到过去的那样……"
 	COX_all_messed_up: "满目狼藉"
-	COX_all_messed_up: "现在的新疆，到处都是混乱过后的痕迹，战火破坏了村落，农田，和无数的家庭。我们尽了最大的努力了，但这个世界就是这么无情......"
+	COX_all_messed_up: "现在的新疆，到处都是混乱过后的痕迹，战火破坏了村落，农田，和无数的家庭。我们尽了最大的努力了，但这个世界就是这么无情……"
 
 #西北建设与整合
 	#COX_focus.60: "我们的无产阶级战友"
@@ -374,7 +374,7 @@
 	#COX_focus.69: "西北解放"
 	#COX_focus.69_desc: "前方捷报传来，工农红军第一军的先头部队于今日上午进入天水，正式接管了这座原是回回国政治心脏的城市。疯将军辻政信据悉正乘坐飞机仓皇逃往蒙疆，并声称他一定要对赤匪复仇，但在怯懦行为的衬托下，这句挑衅不但苍白无力，更显得滑稽可笑。至于马家军方面，其武装力量原本就是马匪的集合，在我们的打击下一哄而散；其头目马继援则早在数日前就在逃窜途中被抓获，他痛哭求饶的丑态已经随着新闻的发行成为了苏区人民的新谈资。虽然追击逃散的溃军还需要花费更多的时间，但苏维埃已经成功地战胜了回回国与马家军，获得了武装斗争的胜利。原先处于专制军阀与日本驻军压迫下的人民终于可以抬起头来，得到他们失而复返的权利——红旗飘扬，西北终归解放。"
 	#COX_focus.71: "阶段性胜利"
-	#COX_focus.71_desc: "疯将军的统治被终结了，整个西北的人民都沸腾了。二十年的愤怒,二十年的屈辱,在今天这一天宣泄清刷了;战争间的死亡流徙,在今天这一天获得报酬了。马家军的士兵与红军战士热烈相拥，一起品尝着“胜利酒”的滋味......\n我们斩下了九头蛇海德拉的一只蛇头，这是统一战线的胜利，更是人民的胜利。但是，疯将军本人逃遁蒙疆宣布战争尚未结束，日本帝国对我们耽耽虎视，时刻准备将低烈度战争升级到全面战争。胜利是值得庆幸的，但如果我们沉湎于胜利的喜悦而不思进取的话，当断头处再长出两个蛇头时，我们就生死难料了。更何况，关于此次战后统一战线的维护问题，也极有可能动摇我们和马家军合作的基础。要不要继续合作，怎么继续合作。这都是阶段性胜利之后必须考虑的问题。"
+	#COX_focus.71_desc: "疯将军的统治被终结了，整个西北的人民都沸腾了。二十年的愤怒,二十年的屈辱,在今天这一天宣泄清刷了;战争间的死亡流徙,在今天这一天获得报酬了。马家军的士兵与红军战士热烈相拥，一起品尝着“胜利酒”的滋味……\n我们斩下了九头蛇海德拉的一只蛇头，这是统一战线的胜利，更是人民的胜利。但是，疯将军本人逃遁蒙疆宣布战争尚未结束，日本帝国对我们耽耽虎视，时刻准备将低烈度战争升级到全面战争。胜利是值得庆幸的，但如果我们沉湎于胜利的喜悦而不思进取的话，当断头处再长出两个蛇头时，我们就生死难料了。更何况，关于此次战后统一战线的维护问题，也极有可能动摇我们和马家军合作的基础。要不要继续合作，怎么继续合作。这都是阶段性胜利之后必须考虑的问题。"
 	#COX_focus.72: "枕戈待旦"
 	#COX_focus.72_desc: "我们目前掌握的情报表明，辻政信为他的所谓“复仇军团”配备了大量的机动车辆，这对于苏维埃而言显然是个坏消息。人的腿脚无论如何也敌不过汽油驱动的轮胎，一旦让这些机械化部队成功突破防线，我们可能就再也没有追赶他们的机会了。因此，最好的办法就是保持高度的警惕，用凶猛的局部火力封死他们白天的进攻，用四处安插的岗哨粉碎他们夜晚的渗透。在敌人因为自己的装备优势而洋洋得意时，我们的战士将手握钢枪、枕戈待旦，随时准备好告诉敌人，过分依赖机械力量的下场究竟如何。"
 	#COX_focus.73: "边境异动"
@@ -524,7 +524,7 @@
 	#COX_focus.244: "统一战线的潜在盟友"
 	#COX_focus.245: "重建地下情报网络"
 	#COX_focus.246: "被遗忘的重要事项"
-	#COX_focus.247: "事情有点不对劲..."
+	#COX_focus.247: "事情有点不对劲…"
 	#COX_focus.248: "未曾预料的新声"
 	#COX_focus.249: "投票顺利进行"
 	#COX_focus.250: "激荡的红色旋律"
