--- a/localisation/simp_chinese/COX_opening_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_opening_l_simp_chinese.yml
@@ -26,10 +26,14 @@
  CREATING_PROVINCE:0 "§B重提统一战线……§!"
  CREATING_CHKSUM:0 "§B一个联合政府……§!"
  GENERATING_GRADIENT_BORDERS:0 "§B下一场战争……§!"
-
+ #IF线“新内容”文本
  BOOKMARK_NEW_BRY:0 "§Y布里亚特§!"
- BOOKMARK_NEW_BRY_detail:0 "近卫步兵八十八旅\n\n开局请选择§V布里亚特§!\n§Y阋墙御侮§!§m版本新增内容：§!\n\n- §Y第三次§!§x统一§!§z战线§!§G重生§!\n\n-§Y三个独属于§!§J大东亚战争§!§Y的特殊机制§!\n\n- §Y部分GFX及文本修复§!\n\n\n£GFX_texticon_bookmark_LFB\n\n\n\n\n在§q西南§!与§V西北§!的共同攻势下，日本已将其势力范围收缩至华东与华北，但侵略者们依然企图凭借军事手段恢复逐渐失控的§J“大东亚新秩序”§!。\n\n现在，日本帝国将直接介入大东亚战争。玩家将扮演§V西北抗日边区§!，同§q护国§!§e军§!一道跨过长江与黄河，冲向东北的黑山白水，冲向海南的茂密雨林，为苦难了§e一百三十二年的中国§!带来真正的§z独立§!与§w自由§!！"
+ BOOKMARK_NEW_BRY_detail:0 "开局请选择§V布里亚特§!\n\n§G阋墙御侮§!§Y版本新增内容：§!\n\n- 第三次§x统一§!§z战线§!§Y重生§!\n\n- §Y三个独属于§!§J大东亚战争§!§Y的特殊机制§!\n\n- §Y部分GFX及文本修复§!\n--------------\n\n\n£GFX_texticon_bookmark_LFB\n\n\n\n\n在§q西§!§e南§!与§V西北§!的共同攻势下，日本已将其势力范围收缩至华东与华北，但侵略者们依然企图凭借军事手段恢复逐渐失控的§J“大东亚新秩序”§!。\n\n现在，日本帝国将直接介入大东亚战争。你将扮演§V西北抗日政府§!，同§q护国§!§e军§!一道跨过长江与黄河，冲向东北的黑山白水，冲向海南的茂密雨林，为苦难了§x一百三十二年的中国§!带来真正的§i独立§!与§w自由§!！"
+ 
+ #初版“新内容”文本
  #BOOKMARK_NEW_BRY:0 "§Y布里亚特§!"
  #BOOKMARK_NEW_BRY_detail:0 "§e中俄革命§!§Y的交汇§!，§e八十八旅§!§m新旅途§!§Y的起点，从这里开始，迈向§!§e解放故国§!§Y的旅途吧§!"
+
+ #（未来，可能会有变动）正统线“新内容”文本
  #BOOKMARK_BURYATIA_NEW_IFNO:"§Y布里亚特§!"
  #BOOKMARK_BURYATIA_NEW_IFNO_DELAYED:"将在§e“孤光自照”§!版本发布！\n- 完善的重建§x特委§!路线选择，与各地的中共势力建立联系。\n- 初步的§y五年计划§!国策树，为§e解放中国§!打好物质基础。\n- 初步的外交路线，参与中亚、俄罗斯事务。\n- §x"红白之争"§!，党内斗争浮现。\n- 后十年雏形。"
