--- a/localisation/simp_chinese/LFB_countries_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_countries_l_simp_chinese.yml
@@ -29,12 +29,12 @@ COX_XBJ: "西北抗日边区"
 COX_XBJ_ADJ: "西北抗日边区"
 COX_XBJ_DEF: "西北抗日边区"
 
-QIN_NIQ: "西北共治政府"
-QIN_NIQ_ADJ:"西北共治政府"
-QIN_NIQ_DEF:"西北共治政府"
-QIN_MJY: "西北国民防卫军"
-QIN_MJY_ADJ:"西北国民防卫军"
-QIN_MJY_DEF:"西北国民防卫军"
+QIN_NIQ: "西北行政公署"
+QIN_NIQ_ADJ:"西北行政公署"
+QIN_NIQ_DEF:"西北行政公署"
+QIN_MJY: "西北国民军"
+QIN_MJY_ADJ:"西北国民军"
+QIN_MJY_DEF:"西北国民军"
 XIK_KIX: "西康军"
 XIK_KIX_ADJ:"西康军"
 XIK_KIX_DEF:"西康军"
@@ -93,6 +93,3 @@ Construction_Corps:0 "建设兵团"
 
 TNO_newspaper_header_COX: "\n£newspaper_header_COX\n\n\n\n"
 TNO_newspaper_header_XBJ: "\n£newspaper_header_XBJ\n\n\n\n"
-
-MEN_communist: "蒙古人民共和国"
-MEN_communist_party: "蒙古人民阵线"
