--- a/localisation/simp_chinese/XBJ_Northwest_crisis_GUI_l_simp_chinese.yml
+++ b/localisation/simp_chinese/XBJ_Northwest_crisis_GUI_l_simp_chinese.yml
@@ -45,10 +45,10 @@
 
  XBJ_Northwest_crisis_rigional_Info_text:0 "[XBJ_NWC_Getregioninfo]"
  XBJ_NWC_Getregioninfo_0:0 "在蒙古语中，“阿拉善”意味着“五彩斑斓之地”。但俯瞰这片位于蒙古高原最西部的土地，映入眼帘的只有尘土之色——沙漠与戈壁滩，被隆起的山峦割成诸多不规则的牧场，这便是这里最常见的景色。在先秦时期，这片古老的高原就存在人类活动的迹象，但千年以来，此地都鲜有人烟，游牧民来来去去，农耕民族亦难以在如此恶劣的环境下立足。\n直到20世纪，情况也没有太大改变。与其说马家军“统治”了这里，不如说他们将这里当作了缓冲带，将繁华的河西走廊与大草原隔绝开来。马家统治的崩溃对这里的影响微乎其微，如同千年不变的戈壁滩，不论外界如何变迁，这里的人们仍将继续着古老的生活方式。"
- XBJ_NWC_Getregioninfo_1:0 "这是高原之上的一个荒凉的盆地。长期以来，这里的居民用自己的智慧与艰苦的大自然做着斗争，勉强维持着生计。尽管这里的地下富含各类矿藏，堪称资源宝库，但这事实并不为人所知。在苍茫广阔的大地上最常见的人迹，便是驱赶着小群畜群的牧民。\n在西北危机之后，这里的宁静也被打破了。有的难民不惜穿越此地，只为逃往更加安定的新疆。此情此景，致使各地以门宦为单位，家家闭门不出，村村结寨自守。鉴于此地远离混乱的中心，这里的社会还说得上稳定，但毫无疑问，此时此刻，天平正在向失衡的一方迅速倾斜........"
- XBJ_NWC_Getregioninfo_2:0 "作为丝绸之路的重要节点，自汉时起，酒泉就是河西走廊的贸易枢纽，商业的繁荣催生了文化的交汇融合。但时至今日，除了半掩在黄沙下的莫高窟，此地再无半点过去繁盛的影子。丝绸之路早已截断，而马家对河西走廊的开发则集中于东部，于是，在战后的和平时光中，酒泉地区缓慢地衰落着，想要闯荡一番的年轻人纷纷前往东部，而剩下的人则延续着古老的生活方式......\n西北危机的爆发并未能极大的影响此地。但随着难民与土匪的与日俱增，这里的生活亦在缓慢而坚定地滑向深渊。"
- XBJ_NWC_Getregioninfo_3:0 "这座曾经的繁华古城，一度在马家的苦心经营下成为了西北地区乃至整个中国北方的经济中心。但现如今，一切的浮华早已化为了泡影。日本帝国释放的疯狗盘踞在沦为废墟的兰州城，并以此为中心，不间断地发动着骇人听闻的扫荡，誓要昭彰帝国荡平一切抵抗的决心。每日，来自东京的补给渡过重洋，跨越满洲与民国的土地，抵达兰州，伴随而来的是无数坚定的战士。在这片西北的穷山恶水，帝国的前进似乎势不可挡......\n如今，阻碍着他们向西进军的唯有这片土地的拗劲——固执的西北汉子们拒绝投降，他们四散在兰州的田间地头，竭尽所能拖延着日军的步伐。但对于帝国主义的豺狗，抵抗只能激起愈来愈严酷的报复，清扫游击队的战斗变成了惨烈的屠杀，就连最恭顺的平民亦无法摆脱被屠戮的命运。除非流干最后一滴血，这片土地将不会屈服，而假以时日，日军终将用最高效的方式达成这个目的。"
- XBJ_NWC_Getregioninfo_4:0 "西宁，作为西北地区除兰州外最富裕的地区，曾是无数汉人逃难的避风港。战后，在马家的经营下，这里成为了投资的好去处。日本的先进技术为经济增长注入了不竭的活力，而大量的流民又确保了廉价劳动力的充足，二者合力，促成了惊人的“西北奇迹”。\n但日军的战靴碾碎了西北经济繁荣的泡沫，他们以摧枯拉朽之势占领了兰州，使得百公里开外的西宁成为了抵抗的最前线。西宁军民以巨大的代价抵御着日军越来越强大的攻势，在布满弹孔的古城墙后，家家户户都紧闭大门，希望可以从敌寇的猛攻下多撑一天......"
+ XBJ_NWC_Getregioninfo_1:0 "这是高原之上的一个荒凉的盆地。长期以来，这里的居民用自己的智慧与艰苦的大自然做着斗争，勉强维持着生计。尽管这里的地下富含各类矿藏，堪称资源宝库，但这事实并不为人所知。在苍茫广阔的大地上最常见的人迹，便是驱赶着小群畜群的牧民。\n在西北危机之后，这里的宁静也被打破了。有的难民不惜穿越此地，只为逃往更加安定的新疆。此情此景，致使各地以门宦为单位，家家闭门不出，村村结寨自守。鉴于此地远离混乱的中心，这里的社会还说得上稳定，但毫无疑问，此时此刻，天平正在向失衡的一方迅速倾斜……"
+ XBJ_NWC_Getregioninfo_2:0 "作为丝绸之路的重要节点，自汉时起，酒泉就是河西走廊的贸易枢纽，商业的繁荣催生了文化的交汇融合。但时至今日，除了半掩在黄沙下的莫高窟，此地再无半点过去繁盛的影子。丝绸之路早已截断，而马家对河西走廊的开发则集中于东部，于是，在战后的和平时光中，酒泉地区缓慢地衰落着，想要闯荡一番的年轻人纷纷前往东部，而剩下的人则延续着古老的生活方式……\n西北危机的爆发并未能极大的影响此地。但随着难民与土匪的与日俱增，这里的生活亦在缓慢而坚定地滑向深渊。"
+ XBJ_NWC_Getregioninfo_3:0 "这座曾经的繁华古城，一度在马家的苦心经营下成为了西北地区乃至整个中国北方的经济中心。但现如今，一切的浮华早已化为了泡影。日本帝国释放的疯狗盘踞在沦为废墟的兰州城，并以此为中心，不间断地发动着骇人听闻的扫荡，誓要昭彰帝国荡平一切抵抗的决心。每日，来自东京的补给渡过重洋，跨越满洲与民国的土地，抵达兰州，伴随而来的是无数坚定的战士。在这片西北的穷山恶水，帝国的前进似乎势不可挡……\n如今，阻碍着他们向西进军的唯有这片土地的拗劲——固执的西北汉子们拒绝投降，他们四散在兰州的田间地头，竭尽所能拖延着日军的步伐。但对于帝国主义的豺狗，抵抗只能激起愈来愈严酷的报复，清扫游击队的战斗变成了惨烈的屠杀，就连最恭顺的平民亦无法摆脱被屠戮的命运。除非流干最后一滴血，这片土地将不会屈服，而假以时日，日军终将用最高效的方式达成这个目的。"
+ XBJ_NWC_Getregioninfo_4:0 "西宁，作为西北地区除兰州外最富裕的地区，曾是无数汉人逃难的避风港。战后，在马家的经营下，这里成为了投资的好去处。日本的先进技术为经济增长注入了不竭的活力，而大量的流民又确保了廉价劳动力的充足，二者合力，促成了惊人的“西北奇迹”。\n但日军的战靴碾碎了西北经济繁荣的泡沫，他们以摧枯拉朽之势占领了兰州，使得百公里开外的西宁成为了抵抗的最前线。西宁军民以巨大的代价抵御着日军越来越强大的攻势，在布满弹孔的古城墙后，家家户户都紧闭大门，希望可以从敌寇的猛攻下多撑一天……"
  XBJ_NWC_Getregioninfo_5:0 "玉树的命运和西北这片土地一样波折。玉树，音译自藏文的“遗址”， 据说是藏族格萨尔王传说中王妃珠姆的诞生地。地处青藏高原东北部，这片地区的主要居民也以藏人为主。此地长期以来便是青藏争斗的焦点，围绕此地的控制权，双方一度爆发了千人规模的冲突。\n自1933年《青藏和约》签订以来，玉树一直牢牢为马家所控制。作为马家政权的南部边疆，亦是青藏冲突的前沿，这里一度密布着岗哨与武器库。但在青海陷入混乱的当下，这些原本用于维系马家统治的武备，大多都落入了各地的僧院或是地主的掌控中。打着自保的旗号，他们纷纷组织起自身的武装。但谁知道这些本就对马家统治有所不满的藏人们是否另有所图？"
  XBJ_NWC_Getregioninfo_6:0 "河西走廊地处黄河以西、祁连山和巴丹吉林沙之间，自古以来，这条南北宽度不足200公里的狭窄走廊就是沟通中原与更西方文明的重要通道。古老的丝绸之路为此地带来了繁盛的商业，而数不胜数的战争与民族迁徙更令这个地区成为了诸文化交汇融合的熔炉。\n二十世纪初，马家承袭清朝时蓬勃发展的伊斯兰门宦组织，在青海建立起牢固的统治。战后，作为西北交通的中心，河西走廊随着马家领地的繁荣承载了大量的贸易。但在日军入侵后的短短数年间，这里便成为了激战的前线，在和平年代，贸易的繁盛本就滋生了为数不少的土匪山贼，而在这个人人自危的动荡时期，他们的存在势必极大地威胁到此地的稳定。"
  XBJ_NWC_Getregioninfo_7:0 "在数十年的沉寂后，谁都没有想到，在看似最不可能的新疆爆发了激烈的社会主义革命。如今，新疆解放区仍面临着内外的严峻问题，无法全力支援青海，但作为命运相连的同胞，他们仍将竭尽所能地为我们在的事业提供协助。新疆是我们坚实的后盾，也是中国革命搏动着的心脏，必须不惜一切代价捍卫它！"
@@ -59,6 +59,6 @@
  XBJ_NWC_Getcontroller_tt_1:0 ""
  XBJ_NWC_Getcontroller_tt_2:0 "当前地区 由£GFX_XBJ_Northwest_crisis_ning §G宁系马家§!§Y控制§!，他们是我们的朋友！"
  XBJ_NWC_Getcontroller_tt_3:0 "当前地区 由£GFX_XBJ_Northwest_crisis_qin §W青海马家§!§Y控制§!，§R局势不容乐观！§!"
- XBJ_NWC_Getcontroller_tt_4:0 "当前地区 由£GFX_XBJ_Northwest_crisis_cpc §R中国共产党§!§Y控制§!，形式良好！"
+ XBJ_NWC_Getcontroller_tt_4:0 "当前地区 由£GFX_XBJ_Northwest_crisis_cpc §R中国共产党§!§Y控制§!，形势良好！"
 
  XBJ_Northwest_crisis_Info_tt:0 "西北局的任务是在§R最短时间§!内恢复青海地区的稳定，要达成这个目标，首先要点击某一个地区，派遣调查组，才能使当地的混乱度情况可见。\n左下第一个进度条为“混乱度”。它描述一个地区失序的程度，如果§R超过两个§!地区处于失序状态，恢复青海秩序的努力便会宣告失败。\n左下第二个进度条为“进展”，它主要有三个阶段，来衡量当前地区行动的进度。\n\n在西北危机中，共有两种独特的资源：“粮食”与“工作组”。\n粮食可以用来执行某些可以极大的降低混乱度的决议。§R完全恢复秩序§!的地区每月会为我们提供粮食。粮食也可以通过§R消耗大量政治点数§!从新疆调配。在危机中的青海，粮食是§R极为珍贵§!的资源，务必妥善利用。\n工作组由经验丰富的党员构成。在青海地区，执行任何改革都需要占用一个工作组。在条件合适时，我们可以像新疆请求派遣更多的工作组。除了§R中央工作组§!，所有工作组都需要时间与政治点数组建与转移。\n\n青海的改革是与时间赛跑，我们必须抓紧时间，尽可能多地颁布改革，恢复各地秩序。为抵御日军§R不可避免的进攻§!做足准备。"
