--- a/localisation/simp_chinese/replace/LFB_replace_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/LFB_replace_l_simp_chinese.yml
@@ -1,7 +1,8 @@
 ﻿l_simp_chinese:
+ #建议每次内测包更新时，都加上更新时的日期
  #tno_current_version: "TNO-Light from Lake Baikal v0.11 游子还乡"
  #tno_current_version_date: "2023/3/22 TNO-Light from Lake Baikal v0.11 游子还乡"
- #tno_current_version:0 "TNO：光自贝加尔湖来-Light from Lake Baikal v0.2 大漠孤烟"
+ #tno_current_version:0 "新秩序：光自贝加尔湖来-Light from Lake Baikal v0.2 大漠孤烟"
  #tno_current_version_date:0 "2023/8/31 TNO-Light from Lake Baikal v0.2 大漠孤烟"
- tno_current_version:0 "TNO：光自贝加尔湖来 v0.25 阋墙御侮"
- tno_current_version_date:0 "2023/8/31 TNO-Light from Lake Baikal v0.25 阋墙御侮"
+ tno_current_version:0 "新秩序：光自贝加尔湖来 v0.25 阋墙御侮"
+ tno_current_version_date:0 "2024/2/27（测试中） TNO-Light from Lake Baikal v0.25 阋墙御侮"
