--- a/localisation/simp_chinese/COX_landreform_GUI_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_landreform_GUI_l_simp_chinese.yml
@@ -28,7 +28,7 @@
  COX_sec_Conduct_recapture_operations_text:0 "执行夺回作战"
  COX_sec_Combat_potential_hostile_forces_landlord_text:0 "打击潜在地主武装"
  COX_sec_Combat_potential_hostile_forces_lmam_text:0 "打击潜在宗教武装"
- 
+
  COX_sec_num_Text:0 "现有中央民兵：[?COX_landreform_centre_militia]k"
 
  COX_landreform_operation_area_name3:0 "土地改革"
@@ -65,16 +65,16 @@
  COX_wc_line_segment_tt:0 "目前，本地的水利为：[?COX_acted_state:COX_landreform_water_conservancy_progress|§R§!]%\n由本地可用水利，产生以下效果：\n每月农民支持度：[?COX_acted_state:COX_wc_fs_monthly_change_display|§=+§!]%"
  COX_sec_bar_landlord_tt:0 "地主抵抗度：[?COX_acted_state:COX_landreform_landlord_resistance|§-§!]%"
  COX_sec_bar_lmam_tt:0 "宗教抵抗度：[?COX_acted_state:COX_landreform_lmam_resistance|§-§!]%"
- GFX_COX_water_icon_tt:0 "为中原带来丰沛降水与富饶的的季风从未度过玉门关。但这并不意味着当地的百姓只能依赖屈指可数的绿洲与泉水谋生。以坎儿井为代表的水利工程技术使得来自高山的雪水能将莽莽荒原化为千顷良田。而近代以来，随着中国一步步迈向深渊，新疆的弊政与经济废弛导致古旧的水利设施在长期高负荷使用下大多损坏，尚能使用的旧设施也大多被地主乡绅垄断，进一步恶化了新疆的农业与经济形势。\n\n为了实现新疆的土地改革，在技术上对农业水利设施的重建工作迫在眉睫。修缮、翻新、兴建、改良，我们必须想尽一切办法建设水利工程。没有良好的水利，就没有繁荣稳定的新疆。\n\n为了了解地方水利情况，我们必须进行调查\nshift可一键修筑\n[Is_COX_Account_The_Water_Conservancy_completed]"
+ GFX_COX_water_icon_tt:0 "为中原带来丰沛降水与富饶的的季风从未度过玉门关。但这并不意味着当地的百姓只能依赖屈指可数的绿洲与泉水谋生。以坎儿井为代表的水利工程技术使得来自高山的雪水能将莽莽荒原化为千顷良田。而近代以来，随着中国一步步迈向深渊，新疆的弊政与经济废弛导致古旧的水利设施在长期高负荷使用下大多损坏，尚能使用的旧设施也大多被地主乡绅垄断，进一步恶化了新疆的农业与经济形势。\n\n为了实现新疆的土地改革，在技术上对农业水利设施的重建工作迫在眉睫。修缮、翻新、兴建、改良，我们必须想尽一切办法建设水利工程。没有良好的水利，就没有繁荣稳定的新疆。\n\n为了了解地方水利情况，我们必须进行调查。\n[Is_COX_Account_The_Water_Conservancy_completed]"
  COX_wc_socialization_button_tt:0 "虽然客观情况还不允许我们进行激进的、理想的所有制改革，但是某些关键产业必须马上从地主与阿訇们的手中扒出来——尤其是水利。长期以来，新疆的水利设施大多掌握在农村地区的地主乡绅手中。他们借此垄断了农业给水甚至生活用水，以此压迫和剥削农民。这种状况很快就会结束。无论是在公审的时候把地主的财产充公，还是让他们服从革命、同意赎卖设施，新疆的水利设施最终都会归村集体或者国家所有。当然，这样的措施无疑会引起反动势力的反抗。\n\n§W我们将动用强制手段，使地主吐出他们所有的灌溉设施，或者至少让他们无法再用它们牟取暴利。这将一次性§!§G快速改善§!§W地区的水利情况，但也将§!§x大大触犯§!§W地主群体的利益。§!\n\n[Is_COX_acted_state_active][Is_the_state_controlled_by_us][Is_COX_Account_The_Water_Conservancy_completed][Is_COX_wc_socialization_completed_or_cooldown]"
- COX_wc_build_Karez_button_tt:0 "坎儿井是我国古代水利的经典杰作，劳动人民的智慧结晶，它能将高山冰雪的融水通过遮光的地下渠道输送到田间用于灌溉，毫无疑问是新疆农业的命脉之一。但如今，许多乡村地区有修建坎儿井的条件，却由于各种历史与现实原因没有修筑；已有的很多坎儿井设施经调查也已经严重老化，难以继续使用。要确保土地革命后农业生产的正常进行并改善农民的生活水平，就需要我们动用有限的资源翻新旧井、兴修新井，彻底解决灌溉问题。当然，要实现全部的建设目标自然不容易。\n\n§W相关的工程投入可以帮助我们§!§G小幅度改善§!§W地区的水利情况。§!\n\n[Is_COX_acted_state_active][Is_the_state_controlled_by_us][Is_COX_Popularize_The_Karez_completed][Is_COX_wc_build_Karez_completed_or_cooldown]"
+ COX_wc_build_Karez_button_tt:0 "坎儿井是我国古代水利的经典杰作，劳动人民的智慧结晶，它能将高山冰雪的融水通过遮光的地下渠道输送到田间用于灌溉，毫无疑问是新疆农业的命脉之一。但如今，许多乡村地区有修建坎儿井的条件，却由于各种历史与现实原因没有修筑；已有的很多坎儿井设施经调查也已经严重老化，难以继续使用。要确保土地革命后农业生产的正常进行并改善农民的生活水平，就需要我们动用有限的资源翻新旧井、兴修新井，彻底解决灌溉问题。当然，要实现全部的建设目标自然不容易。\n\n§W相关的工程投入可以帮助我们§!§G小幅度改善§!§W地区的水利情况。§!\n\n§Y小提示：同时按下鼠标左键+Shift键点击时，可以一键为全疆修建坎儿井！选项冷却期为30天。§!\n\n[Is_COX_acted_state_active][Is_the_state_controlled_by_us][Is_COX_Popularize_The_Karez_completed][Is_COX_wc_build_Karez_completed_or_cooldown]"
  COX_wc_crack_down_on_bullies_button_tt:0 "水在新疆的价值可比黄金，是新疆农业的命脉。但在农村地区，许多地主劣绅利用各种龌龊手段霸占了群众好不容易才获得的宝贵水源和水利设施。农民可能会妥协，但我们怎能答应！赤卫队战士很快就到他们家门口！当然，对于那些性质不那么恶劣的垄断者，和平解决依然是第一选择。毕竟一旦反动分子狗急跳墙，后果可能不堪设想。\n\n§W这将允许我们收回在动荡的局势中被反动分子夺取的水利设施。当地区§!§G治安良好§!§W时，我们将§!§Y无法§!§W通过执行再没收以改善水利情况。§!\n\n[Is_COX_acted_state_active][Is_the_state_controlled_by_us][Is_COX_Account_The_Water_Conservancy_completed][Is_COX_wc_crack_down_on_bullies_completed_or_cooldown][Is_the_wc_broken_by_enermy][Is_this_state_stable]"
  COX_mil_collect_the_militia_button_tt:0 "革命的胜利果实若没有武装力量的保卫，便会在风雨催折下迅速凋零。因此，将一部分被发动起来参与革命的群众武装为民兵赤卫队不仅可能，而且必要。新组建的民兵将会替代已经化整为零下乡工作的红军承担起维持地方稳定与打击敌对武装的职能。\n\n§W这将允许我们在当地民众支持度达到§!§Y50%§!§W的情况下组织起民兵武装。一个地区所能征募的民兵数量受到总人口数限制，因此§!§Y不能§!§W无限制地征召。§!\n\n[Is_COX_Training_The_Militia_completed][Is_COX_acted_state_active][Is_the_state_controlled_by_us][Is_the_mil_sup_reached][Is_COX_mil_collect_the_militia_completed_or_cooldown][Is_the_mil_fs_enthough]"
  COX_mil_safety_patrol_button_tt:0 "必须牢牢记住：旧势力绝不会甘心失败，他们一旦遭受挫折，一定会缩回暗处舔舐伤口，随后卷土重来。只要让赤卫队仔细搜查，就一定能找到他们密谋的蛛丝马迹——比如藏匿的一批军火——从而在骚乱发生之前就将其扼杀在摇篮之中。\n\n§W我们将出动该地区的民兵部队执行巡查，并§!§G小幅度降低§!§W地主和极端宗教势力可能的叛乱倾向。已被调往中央的民兵将无法参与此任务。§!\n\n[Is_COX_Training_The_Militia_completed][Is_COX_acted_state_active][Is_the_state_controlled_by_us][Is_COX_mil_safety_patrol_completed_or_cooldown][Is_the_mil_enthough_to_do]"
  COX_mil_mobilization_militia_to_centre_button_tt:0 "在地方民兵充足的前提下，可以将其中的一部分调往中央以备不时之需。中央民兵可以执行全疆境内的武装打击任务，但无法参与到地区的日常治安维护中。\n\n[Is_COX_Training_The_Militia_completed][Is_COX_acted_state_active][Is_the_state_controlled_by_us][Is_COX_mil_mobilization_militia_to_centre_completed_or_cooldown]"
- COX_mil_mobilization_militia_to_centre_plus_button_tt:0 "增加100民兵调往中央\nshift加左键增加1k"
- COX_mil_mobilization_militia_to_centre_minus_button_tt:0 "减少100民兵调往中央\nshift加左键减少1k"
- 
+ COX_mil_mobilization_militia_to_centre_plus_button_tt:0 "增加100民兵调往中央\nShift加左键增加1k"
+ COX_mil_mobilization_militia_to_centre_minus_button_tt:0 "减少100民兵调往中央\nShift加左键减少1k"
+
  COX_landreform_button_default_tt:0 "§g—政策尚未拟定—§!"
 
  COX_land_Crack_down_on_high_land_rent_button_tt:0 "[COX_land_Crack_down_on_high_land_rent_button_tt_show]\n\n[Is_COX_acted_state_active][Is_the_state_controlled_by_us][Is_land_reform_ongoing][Is_COX_land_Crack_down_on_high_land_rent_completed_or_cooldown][Is_COX_Lower_The_Rent_And_Fight_The_Local_Bully_completed]"
@@ -147,8 +147,8 @@
   Is_the_mil_enthough_to_do_no:0 "£trigger_no 达到目标所需民兵要求 \n"
   Is_the_state_not_stable_no:0 "£trigger_no 省份处于骚乱 \n"
   Is_land_reform_ongoing_yes:0 "£trigger_no 本月内未进行其它改革 \n"
-  Is_landlord_res_high_yes:0 "£trigger_no 地主抵抗度低于2 \n"
-  Is_lmam_res_high_yes:0 "£trigger_no 宗教抵抗度低于2 \n"
+  Is_landlord_res_high_yes:0 "£trigger_no 地主抵抗度低于20% \n"
+  Is_lmam_res_high_yes:0 "£trigger_no 宗教抵抗度低于20% \n"
 
  #####省份介绍#####
  introduction_cox_landreform_dh:0 "作为盛世才统治时期以来新疆唯一的首府，迪化享受着种种的资源倾斜与政策优待。密集的街区以大十字为中心向外辐射，通电的路灯在夜间也能放射光明，而泛黄的二层小洋楼更是俯仰可见；全疆百分之九十以上的重工业都围绕着迪化市分布在周边的乡村区域，源源不断地向外输送着制造业产品。然而，在持续搏动三十年而几乎得不到养护的情况下，这颗工业心脏搏动的力量正在越来越微弱，工人们忿忿不安，地主实业家一直在压低工资。许多人都在用怀疑的目光审视着失去了活力的迪化，怀疑它是否还有资格作为新疆省的核心。"
@@ -167,7 +167,7 @@
  introduction_cox_landreform_aksq:0 "阿克赛钦的地名来自于突厥语，意为“中国的白石滩”，但自二十世纪以来，这一地区却常常不在中国政权的控制范围之内。随着第二次世界大战的结束与英国的崩溃，英属印度及其继承者对强占领土的控制力与日俱减，一度沦丧的阿克赛钦地区进入了自治状态，并通过依附于新疆获得当地所不能生产的日用品。名义上，阿克赛钦地区的主权已经收复，当地的居民也仍然保有对中国的文化认同，但新疆当局对这一地区所施行的统治，事实上比羁縻还要更放任自流。"
  introduction_cox_landreform_tklmgdq:0 "塔克拉玛干地区究竟是否够格成为一个独立的行政区划，一直以来都是存在疑问的。覆盖辖区全境的除了黄沙还是只有黄沙，常住人口堪堪数万，沿仅有的一条和田河零星分布于数个河谷绿洲当中，而广袤的沙漠地带昼夜温差巨大，根本无法居住。由于恶劣的自然环境，当地的经济基本处于低水准自给自足的状态，各个聚落的宗族掌握着管理权，民族矛盾相对罕见，阶级矛盾也较为缓和。不能提供任何产品，也不期望外界提供任何产品——这就是塔克拉玛干地区的现状，而改变的希望则近乎无存。"
 
- 
+
  #####决议#####
  cox_landreform_monthly_effect:0 "§G月度改革报告§!"
  bypass_land_reform:0 "跳过土改阶段"
@@ -237,7 +237,7 @@
  COX_landreform_deal_with_unrest_failed_effect:0 "§R骚乱持续蔓延§!"
  COX_dealing_with_local_unrest:0 "§G我们已在此处理地方骚动！§!"
  COX_event_landreform_1_tt:0 "§G土改胜利完成！§!"
- COX_landreform_monthly_effect_tt:0 "§G为了取得最终的胜利，我们需要至少完成10个地区的土地与宗教改革，同时，我们必须保证所有地区不处于§!§R骚乱§!§G当中§!"
+ COX_landreform_monthly_effect_tt:0 "§G为了取得最终的胜利，我们需要§Y至少完成10个地区的土地与宗教改革§!，同时，我们必须保证所有地区不处于§!§R骚乱§!§G当中§!"
  COX_landreform_global_fs_gain_tt:0 "§G我们深受农民的拥戴，全疆上下，群众正帮助我们打击反动势力§!"
  COX_landreform_deadline:0 "土改失败倒计时"
  COX_landreform_deadline_desc:0 "留给我们土改的时间并不多，反动地主和宗教阿訇正在暗处密谋，似乎在准备颠覆苏区。"
