--- a/localisation/simp_chinese/LFB_countries_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_countries_l_simp_chinese.yml
@@ -10,10 +10,10 @@ COX_xib_ADJ: "西北抗日民主政府"
 COX_xib_DEF: "西北抗日民主政府"
 COX_communist_party: "中国共产党 - 新疆局"
 COX_communist_party_long: "中国共产党 - 新疆局（CPC - XinJiang Bureau）"
-COX_socialist_party: "中国共产党 - 新疆局"
-COX_socialist_party_long: "中国共产党 - 新疆局（CPC - XinJiang Bureau）"
-COX_social_democracy_party: "新疆保卫和平民主同盟"
-COX_social_democracy_party_long: "新疆保卫和平民主同盟（Peace and Democracy League of XinJiang）"
+COX_communist_3_party: "中国共产党 - 新疆局"
+COX_communist_3_party_long: "中国共产党 - 新疆局（CPC - XinJiang Bureau）"
+COX_socialist_party: "新疆保卫和平民主同盟"
+COX_socialist_party_long: "新疆保卫和平民主同盟（Peace and Democracy League of XinJiang）"
 COX_despotism_party: "中国共产党 - 紧急委员会"
 COX_despotism_party_long: "中国共产党 - 紧急委员会"
 COX_despotism_democracy_party: "抗日军政委员会"
